<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">La Cuenta</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- monto cta -->
    <string name="monto_tv">Monto Cuenta</string>
    <string name="monto_ed_hint">$00.00</string>

    <!-- personas -->
    <string name="people_tv">Personas #</string>
    <string name="people_ed_txt">1</string>
    <string name="btn_mas">+</string>
    <string name="btn_menos">-</string>
    <string name="people_spn_header">Numero de personas:</string>

    <string-array name="people_filler">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- propina -->
    <string name="propina_tv">Propina:</string>
    <string name="propina_spn_header">Porcentaje de propina:</string>
    <string name="propina_ed_hint">$00.00</string>
    <string name="propina_tgg_on">Propina $</string>
    <string name="propina_tgg_off">Propina %</string>

    <string-array name="propina_spn_filler">
        <item> 5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>

    <!-- redondear -->
    <string name="redondear_tv">Redondear: </string>
    <string name="home_sp_tip">Redondear: </string>
    <string name="redondear_on">Redondear ON</string>
    <string name="redondear_off">Redondear OFF </string>

    <!-- actions -->
    <string name="action_save">Guardar</string>
    <string name="action_consulta">Consultar</string>
    <string name="action_borrar">Borrar Tabla</string>
    <string name="action_exportMes">Exportar (Mes)</string>
    <string name="action_exportFechas">Exportar (Fecha)</string>
    <string name="signo_porcentual">%</string>
    <string name="signo_moneda">$</string>
    
    
	<!-- splash -->
    <string name="title_activity_splash">Splash</string>
    <string name="splash_img_desc">TSIS Logo</string>

</resources>
