<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    
    <item android:id="@+id/action_save"
          android:title="@string/action_save"
          android:showAsAction="never" />
    
    <item android:id="@+id/action_consulta"
          android:title="@string/action_consulta"
          android:showAsAction="never" />
    
    <item android:id="@+id/action_borrar"
          android:title="@string/action_borrar"
          android:showAsAction="never" />
    
    <item android:id="@+id/action_exportMes"
          android:title="@string/action_exportMes"
          android:showAsAction="never" />
    
    <item android:id="@+id/action_exportFecha"
          android:title="@string/action_exportFechas"
          android:showAsAction="never" />
</menu>
