<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <!--     RESULTADO -->
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/resultado_tv"
            android:textColor="@color/lacuenta_oscuro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textSize="35sp" />       
    </LinearLayout>

<!--     MONTO CTA, PERSONAS, PROPINA -->
   <LinearLayout 
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" > 
        <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
			    <TextView
			        android:layout_weight="1"
		        	android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
			        android:text="@string/monto_tv" />
			    <TextView
		            android:id="@+id/propina_tv"
			        android:layout_weight="1"
		        	android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
		        	android:text="@string/people_tv" />
			    <ToggleButton
		   		    android:id="@+id/propina_tgg"
		   		    android:layout_weight="1"
			        android:layout_width="0dp"
			        android:checked="false"
			        android:textOff="@string/propina_tgg_off"
			        android:textOn="@string/propina_tgg_on"
			        android:layout_height="wrap_content" />
		</LinearLayout> 

 		<LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
			    <EditText
			        android:id="@+id/monto_ed"
			        android:layout_weight="1"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:inputType="numberDecimal"
			        android:maxLength="8"
			        android:hint="@string/monto_ed_hint" />
			    <Spinner
			        android:id="@+id/people_spn"
			        android:layout_weight="1"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content" />
				<Spinner
			        android:id="@+id/propina_spn"
			        android:layout_weight="1"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content" />
		        <EditText
			        android:id="@+id/propina_ed"
			        android:layout_weight="1"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:inputType="numberDecimal"
			        android:maxLength="8"
			        android:visibility="gone"
			        android:hint="@string/propina_ed_hint" />    
		</LinearLayout>
    
    </LinearLayout>   

<!--     REDONDEO -->
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
   		<ToggleButton
   		    android:id="@+id/redondeo_tgg"
   		    android:layout_weight="1"
	        android:layout_width="0dp"
	        android:checked="false"
	        android:textOn="@string/redondear_on"
	        android:textOff="@string/redondear_off"
	        android:layout_height="wrap_content" />        
    </LinearLayout>
    
    

    
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <DatePicker
	        android:id="@+id/fecha_dp"
	        android:layout_width="0dp"
	        android:layout_height="0dp" />       
    </LinearLayout> 
    


</LinearLayout>